cabal-version: 3.8

name: wasm-hs
version: 0.0.0.0
license: GPL-3.0-only
license-file: LICENSE.txt
copyright: Copyright (C) 2023 Alex Ionescu
build-type: Simple

extra-source-files:
  README.md

common ghc-flags
  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    ImplicitParams
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoFieldSelectors
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    PartialTypeSignatures
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    RebindableSyntax
    RecordWildCards
    RecursiveDo
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    UnliftedDatatypes
    UnliftedNewtypes
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

common rts-flags
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: ghc-flags

  hs-source-dirs: src
  exposed-modules:
    Data.HList
    Language.WASM.Instr
    Language.WASM.Module
    Language.WASM.Prelude
    Language.WASM.Syntax

  build-depends:
    base >=4.18 && <5
    , vector ^>= 0.13

executable wasm-hs
  import: ghc-flags
  import: rts-flags

  hs-source-dirs: app
  main-is: Main.hs

  other-modules:
    Examples

  build-depends:
    base >=4.18 && <5
    , vector ^>= 0.13
    , wasm-hs
