cabal-version: 3.8

name: wasm-hs
version: 0.0.0.0
license: GPL-3.0-only
license-file: LICENSE.txt
copyright: Copyright (C) 2023-2024 Alex Ionescu
build-type: Simple

extra-doc-files:
  README.md

common ghc-flags
  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    QuantifiedConstraints
    RebindableSyntax
    TypeAbstractions
    TypeFamilies
    UndecidableInstances
    UnliftedDatatypes

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

library
  import: ghc-flags

  hs-source-dirs: src
  exposed-modules:
    Data.HList
    Language.Wasm.Examples
    Language.Wasm.Instr
    Language.Wasm.Module
    Language.Wasm.Prelude
    Language.Wasm.Syntax

  build-depends:
    base >=4.19 && <5
    , vector ^>= 0.13

executable wasm-hs
  import: ghc-flags
  default-extensions:
    OverloadedLists

  hs-source-dirs: app
  main-is: Main.hs

  build-depends:
    base >=4.19 && <5
    , wasm-hs

test-suite wasm-hs-test
  import: ghc-flags
  default-extensions:
    OverloadedLists

  type: exitcode-stdio-1.0

  hs-source-dirs: test
  main-is: Main.hs

  build-depends:
    base >=4.19 && <5
    , silently ^>= 1.2.5
    , tasty ^>= 1.4.3
    , tasty-hunit ^>= 0.10.0.3
    , wasm-hs
